--- a/okhttp-urlconnection/build.gradle
+++ b/okhttp-urlconnection/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
   testImplementation project(':okhttp-testing-support')
   testImplementation project(':okhttp-tls')
-  testImplementation project(':mockwebserver')
+  testImplementation project(':mockwebserverwrapper')
   testImplementation deps.junit
   testImplementation deps.assertj
 }
