--- a/mockwebserver/build.gradle
+++ b/mockwebserver/build.gradle
@@ -1,8 +1,6 @@
-apply plugin: 'me.champeau.gradle.japicmp'
-
 jar {
   manifest {
-    attributes('Automatic-Module-Name': 'okhttp3.mockwebserver')
+    attributes('Automatic-Module-Name': 'mockwebserver3')
   }
 }
 
@@ -21,18 +19,3 @@ afterEvaluate { project ->
     outputFormat = 'gfm'
   }
 }
-
-task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
-  oldClasspath = files(baselineJar(project, baselineVersion))
-  newClasspath = files(jar.archivePath)
-  onlyBinaryIncompatibleModified = true
-  failOnModification = true
-  txtOutputFile = file("$buildDir/reports/japi.txt")
-  ignoreMissingClasses = true
-  includeSynthetic = true
-  packageExcludes = [
-      'okhttp3.mockwebserver.internal',
-      'okhttp3.mockwebserver.internal.duplex',
-  ]
-}
-check.dependsOn(japicmp)
