--- a/okhttp-brotli/build.gradle
+++ b/okhttp-brotli/build.gradle
@@ -15,7 +15,7 @@ dependencies {
   compileOnly deps.jsr305
 
   testImplementation project(':okhttp-testing-support')
-  testImplementation project(':mockwebserver')
+  testImplementation project(':mockwebserverwrapper')
   testImplementation deps.conscrypt
   testImplementation deps.junit
   testImplementation deps.assertj
