--- a/samples/compare/build.gradle
+++ b/samples/compare/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
   implementation project(':okhttp')
-  implementation project(':mockwebserver')
+  implementation project(':mockwebserverwrapper')
   implementation project(':okhttp-tls')
 
   testImplementation project(':okhttp-testing-support')
