--- a/samples/guide/build.gradle
+++ b/samples/guide/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'kotlin-kapt'
 
 dependencies {
   implementation project(':okhttp')
-  implementation project(':mockwebserver')
+  implementation project(':mockwebserverwrapper')
   implementation project(':okhttp-tls')
   implementation deps.animalSniffer
   implementation deps.moshi
