--- a/okhttp-dnsoverhttps/build.gradle
+++ b/okhttp-dnsoverhttps/build.gradle
@@ -14,7 +14,7 @@ dependencies {
   compileOnly deps.jsr305
 
   testImplementation project(':okhttp-testing-support')
-  testImplementation project(':mockwebserverwrapper')
+  testImplementation project(':mockwebserver-deprecated')
   testImplementation deps.conscrypt
   testImplementation deps.junit
   testImplementation deps.assertj
