--- a/samples/slack/build.gradle
+++ b/samples/slack/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-  implementation project(':mockwebserverwrapper')
+  implementation project(':mockwebserver-deprecated')
   implementation deps.moshi
 }
