--- a/samples/static-server/build.gradle
+++ b/samples/static-server/build.gradle
@@ -11,7 +11,7 @@ jar {
 }
 
 dependencies {
-  implementation project(':mockwebserverwrapper')
+  implementation project(':mockwebserver-deprecated')
 }
 
 shadowJar {
