--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'okhttp-parent'
 
 include ':mockwebserver'
 include ':mockwebserver-deprecated'
+include ':mockwebserver-junit4'
 
 if (properties.containsKey('android.injected.invoked.from.ide') ||
         System.getenv('ANDROID_SDK_ROOT') != null) {
