--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,6 +225,8 @@ jobs:
 
       - run:
           command: |
+            sudo add-apt-repository ppa:openjdk-r/ppa
+            sudo apt-get update
             sudo apt-get -y install openjdk-11-jdk
 
       - runtests:
