Attempting to get both JDKs installed

--- a/build.gradle
+++ b/build.gradle
@@ -196,6 +196,10 @@ subprojects { project ->
   test {
     jvmArgs += "-Dokhttp.platform=$platform"
 
+    javaCompiler = javaToolchains.compilerFor {
+      languageVersion = JavaLanguageVersion.of(16)
+    }
+
     javaLauncher = javaToolchains.launcherFor {
       languageVersion = JavaLanguageVersion.of(16)
     }
