Attempting to get both JDKs installed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,12 +213,12 @@ jobs:
 
   testjdk16:
     docker:
-      - image: circleci/openjdk:16-jdk-buster
+      - image: circleci/openjdk:16-ea-20-jdk-buster
 
     environment:
       JVM_OPTS: -Xmx1g
       TERM: dumb
-      JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
+      JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64,/usr/local/openjdk-16
 
     steps:
       - checkout
@@ -232,7 +232,7 @@ jobs:
 
       - runtests:
           platform: jdk9
-          testjdk: -Dtest.java.version=16
+          testjdk: -Dtest.java.version=16 -Dorg.gradle.java.installations.paths=/usr/lib/jvm/java-11-openjdk-amd64
 
   testconscrypt:
     docker:
