Attempting to get both JDKs installed

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 android.enableJetifier=true
 android.useAndroidX=true
+org.gradle.java.installations.paths=/usr/local/openjdk-16,/usr/lib/jvm/java-11-openjdk-amd64\
+org.gradle.java.installations.auto-download=false
