--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ rootProject.name = 'okhttp-parent'
 include ':mockwebserver'
 include ':mockwebserver-deprecated'
 include ':mockwebserver-junit4'
+include ':mockwebserver-junit5'
 
 if (properties.containsKey('android.injected.invoked.from.ide') ||
         System.getenv('ANDROID_SDK_ROOT') != null) {
