--- a/mockwebserver-junit5/build.gradle
+++ b/mockwebserver-junit5/build.gradle
@@ -6,6 +6,7 @@ jar {
 
 test {
   useJUnitPlatform()
+  systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
 }
 
 dependencies {
