Early testing with kotlin 1.4.20

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
       'jsoup': '1.13.1',
       'junit': '4.13',
       'junit5': '5.7.0',
-      'kotlin': '1.4.10',
+      'kotlin': '1.4.20-M1',
       'moshi': '1.11.0',
       'okio': '2.9.0',
       'ktlint': '0.38.0',
@@ -54,9 +54,9 @@ buildscript {
   ]
 
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.20-M1"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.10.1"
-    classpath "com.android.tools.build:gradle:4.0.1"
+    classpath "com.android.tools.build:gradle:4.0.2"
     classpath deps.bnd
   }
 
@@ -64,6 +64,7 @@ buildscript {
     mavenCentral()
     gradlePluginPortal()
     google()
+    maven { url "https://dl.bintray.com/kotlin/kotlin-eap/" }
   }
 }
 
@@ -112,6 +113,7 @@ allprojects {
       url 'https://dl.bintray.com/kotlin/dokka'
     }
     google()
+    maven { url "https://dl.bintray.com/kotlin/kotlin-eap/" }
   }
 
   task downloadDependencies() {
