Working through issues

--- a/native-image-tests/build.gradle
+++ b/native-image-tests/build.gradle
@@ -21,6 +21,14 @@ dependencies {
   implementation deps.junit5Api
   implementation deps.junit5Jupiter
 
+  implementation("org.graalvm.nativeimage:svm:20.2.0") {
+    // https://youtrack.jetbrains.com/issue/KT-29513
+    exclude group: "org.graalvm.nativeimage"
+    exclude group: "org.graalvm.truffle"
+    //    exclude group= "org.graalvm.sdk"
+    exclude group: "org.graalvm.compiler"
+  }
+
   compileOnly deps.jsr305
 }
 
