--- a/native-image-tests/build.gradle
+++ b/native-image-tests/build.gradle
@@ -4,9 +4,9 @@ plugins {
 
 dependencies {
   implementation deps.assertj
-  implementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
-  implementation "org.junit.jupiter:junit-jupiter-engine:5.7.0"
-  implementation "org.junit.platform:junit-platform-console:1.7.0"
+  implementation deps.junit5Api
+  implementation deps.junit5JupiterEngine
+  implementation deps.junitPlatformConsole
 
   compileOnly deps.jsr305
 }
