--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -76,6 +76,7 @@ dependencies {
   testImplementation project(':okhttp-urlconnection')
   testImplementation project(':mockwebserver')
   testImplementation project(':mockwebserver-junit4')
+  testImplementation project(':mockwebserver-junit5')
   testImplementation project(':mockwebserver-deprecated')
   testImplementation project(':okhttp-logging-interceptor')
   testImplementation project(':okhttp-brotli')
@@ -83,6 +84,7 @@ dependencies {
   testImplementation project(':okhttp-sse')
   testImplementation deps.conscrypt
   testImplementation deps.junit
+  testImplementation deps.junit5Api
   testImplementation deps.assertj
   testImplementation deps.openjsse
   testImplementation deps.bndResolve
