Fix stuff to get nativeImage running

--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ buildscript {
       'junit5Api': "org.junit.jupiter:junit-jupiter-api:${versions.junit5}",
       'junit5JupiterEngine': "org.junit.jupiter:junit-jupiter-engine:${versions.junit5}",
       'junit5VintageEngine': "org.junit.vintage:junit-vintage-engine:${versions.junit5}",
-      'junitPlatformConsole': "org.junit.platform:junit-platform-console:${versions.junit5}",
+      'junitPlatformConsole': "org.junit.platform:junit-platform-console:1.7.0",
       'kotlinStdlib': "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}",
       'moshi': "com.squareup.moshi:moshi:${versions.moshi}",
       'moshiKotlin': "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshi}",
