--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,10 @@ if (properties.containsKey('android.injected.invoked.from.ide') ||
   include ':android-test'
 }
 
-include ':native-image-tests'
+//if (!properties.containsKey('android.injected.invoked.from.ide')) {
+  include ':native-image-tests'
+//}
+
 include ':okcurl'
 include ':okhttp'
 include ':okhttp-bom'
