--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,11 @@ if (properties.containsKey('android.injected.invoked.from.ide') ||
   include ':android-test'
 }
 
-include ':native-image-tests'
+if (!properties.containsKey('android.injected.invoked.from.ide')) {
+  // Not included in IDE as this confuses Intellij for obvious reasons.
+  include ':native-image-tests'
+}
+
 include ':okcurl'
 include ':okhttp'
 include ':okhttp-bom'
